--- a/slimmer/Makefile
+++ b/slimmer/Makefile
@@ -16,6 +16,7 @@ pandainc = ${CMSSW_BASE}/src
 pandalib = ${CMSSW_BASE}/lib/${SCRAM_ARCH}
 target = ${CMSSW_BASE}/bin/${SCRAM_ARCH}/testhbbtree
 regression = ${CMSSW_BASE}/bin/${SCRAM_ARCH}/regresstree
+smear = ${CMSSW_BASE}/bin/${SCRAM_ARCH}/smeartree
 install = ${CMSSW_BASE}/bin/${SCRAM_ARCH}/$(installname)
 pandalibs = -lPandaTreeFramework -lPandaTreeObjects -lPandaTreeUtils
 #testfile = /mnt/hadoop/scratch/dabercro/panda/$(vers)/*.root
@@ -29,7 +30,7 @@ all: $(target) $(effs)
 $(install): $(target) $(effs)
 	cp $(target) $(install)
 
-$(tarball): $(install) $(thejq) $(data) $(regression) $(effs)
+$(tarball): $(install) $(thejq) $(data) $(regression) $(effs) $(smear)
 	test -d ${CMSSW_BASE}/data || mkdir ${CMSSW_BASE}/data
 	tar -czf $(tarball) --directory ${CMSSW_BASE} bin lib external data
 
@@ -65,6 +66,15 @@ $(regression): src/regression.cpp include/*.h include/feedregression.h include/$
 	$(external) -lboost_filesystem -lrt -g \
 	$(LDFLAGS) $(CFLAGS) -L$(pandalib) $(pandalibs) -lTMVA -o $(regression) src/regression.cpp
 
+$(smear): src/smear.cpp include/*.h include/feedsmear.h include/smearfile.h \
+	${CROMBIEPATH}/src/include/crombie/*.h \
+	include/roccor/RoccoR.cc include/jecsys \
+	${CMSSW_BASE}/lib/${SCRAM_ARCH}/*.so \
+	${PWD}/flags.sh
+	g++ -Iinclude -I$(pandainc) -I${CROMBIEPATH}/src/include \
+	$(external) -lboost_filesystem -lrt -g \
+	$(LDFLAGS) $(CFLAGS) -L$(pandalib) $(pandalibs) -lTMVA -o $(smear) src/smear.cpp
+
 
 include/jecsys:
 	cd include; git clone https://github.com/miquork/jecsys.git; cd jecsys; git checkout Summer16_23Sep2016V4
@@ -83,7 +93,11 @@ data/jec/jec.d: data/jec/download.url
 
 include/feedregression.h: include/[!f]*.h src/regression.cpp include/$(regclass).h ${CROMBIEPATH}/scripts/feedpanda.pl
 	crombie feedpanda $(pandainc)/PandaTree/defs/panda.def \
-	include/genjet.h include/regression.h include/regression.h include/jetselect.h include/$(regclass).h src/regression.cpp include/feedregression.h
+	include/genjet.h include/regression.h include/jetselect.h include/$(regclass).h src/regression.cpp include/feedregression.h
+
+include/feedsmear.h: include/[!f]*.h src/smear.cpp include/smearfile.h ${CROMBIEPATH}/scripts/feedpanda.pl
+	crombie feedpanda $(pandainc)/PandaTree/defs/panda.def \
+	include/pfvecs.h include/jetselect.h include/smearfile.h src/smear.cpp include/feedsmear.h
 
 include/feedpanda.h: include/[!f]*.h include/$(flatclass).h include/checkrun.h src/slimmer.cpp ${CROMBIEPATH}/scripts/feedpanda.pl
 	crombie feedpanda $(pandainc)/PandaTree/defs/panda.def include/[!f]*.h src/slimmer.cpp include/feedpanda.h
@@ -92,11 +106,16 @@ include/$(regclass).h: treedefs/$(regclass).txt ${CROMBIEPATH}/scripts/maketree.
 	crombie maketree treedefs/$(regclass).txt
 	mv $(regclass).h include/
 
-include/$(flatclass).h: treedefs/$(flatclass).txt ${CROMBIEPATH}/scripts/maketree.py $(corrections) translate.pl treedefs/regression.txt
+include/$(flatclass).h: treedefs/$(flatclass).txt ${CROMBIEPATH}/scripts/maketree.py $(corrections) translate.pl treedefs/regression.txt treedefs/regeval.txt
 	crombie maketree treedefs/$(flatclass).txt
 	mv $(flatclass).h include/
 
+include/smearfile.h: treedefs/smearfile.txt ${CROMBIEPATH}/scripts/maketree.py $(corrections) translate.pl treedefs/regression.txt treedefs/regeval.txt
+	crombie maketree treedefs/smearfile.txt
+	mv smearfile.h include/
 
+
+$(smear): 
 
 $(effs): data/make_effs.py data/*eff.txt $(corrections)
 	data/make_effs.py
@@ -105,7 +124,7 @@ $(corrections): data/downloads.url
 	cd data; rm *.root; rm *.csv; rm *.xml; rm *.pb; wget -i downloads.url
 	touch $(corrections)
 
-.PHONY: clean test install reg regtest
+.PHONY: clean test install reg regtest smear
 
 reg: $(regression)
 
@@ -117,6 +136,17 @@ regtest: $(regression)
 	test -z ${CMSSW_BASE} || test ! -d $(regtestdir)_old || rm -r $(regtestdir)_old
 	test -z ${CMSSW_BASE} || test ! -d $(regtestdir) || mv $(regtestdir) $(regtestdir)_old
 	test -z ${CMSSW_BASE} || crombie plotdump reg.root $(regtestdir)
+
+smear: $(smear)
+
+smeartestdir = ${HOME}/public_html/plots/testsmear_$(vers)
+
+smeartest: $(smear)
+	test ! -f smear.root || rm smear.root
+	input_dir='/test/pandaf/013/this' smeartree /data/t3home000/dabercro/scratch/TTToHadronic/661A1D00-21C9-634B-829E-48F95273CAC7.root smear.root
+	test -z ${CMSSW_BASE} || test ! -d $(smeartestdir)_old || rm -r $(smeartestdir)_old
+	test -z ${CMSSW_BASE} || test ! -d $(smeartestdir) || mv $(smeartestdir) $(smeartestdir)_old
+	test -z ${CMSSW_BASE} || crombie plotdump smear.root $(smeartestdir)
 
 install: $(tarball)
 
@@ -139,4 +169,4 @@ test: $(target) $(effs) data/jec/jec.d
 	test -z ${CMSSW_BASE} || cut='|!hbb_gen|hbb_gen' crombie plotdump test.root $(testdir)
 
 clean:
-	rm $(target) include/$(flatclass).h include/feedpanda.h include/checkrun.h $(effs) $(data) $(corrections) include/roccor/RoccoR.cc data/jec/jec.d $(regression) $(install)
+	rm $(target) include/$(flatclass).h include/feedpanda.h include/smearfile.h include/checkrun.h $(effs) $(data) $(corrections) include/roccor/RoccoR.cc data/jec/jec.d $(regression) $(install) $(smear)
