Starting presentation slides almost a week in advance!

--- a/slimmer/Makefile
+++ b/slimmer/Makefile
@@ -47,7 +47,7 @@ $(data): data/*.csv data/*.txt data/*.xml data/*.root $(corrections) data/roccor
 	cp data/jec/*.txt ${CMSSW_BASE}/data/jec
 	touch $(data)
 
-$(target): src/slimmer.cpp include/*.h include/checkrun.h include/feedpanda.h include/$(flatclass).h \
+$(target): src/slimmer.cpp include/[!f]*.h include/checkrun.h include/feedpanda.h include/$(flatclass).h \
 	${CROMBIEPATH}/src/include/crombie/*.h ${CROMBIEPATH}/old/SkimmingTools/interface/*.h \
 	include/roccor/RoccoR.cc include/jecsys \
 	${CMSSW_BASE}/lib/${SCRAM_ARCH}/*.so \
@@ -57,7 +57,7 @@ $(target): src/slimmer.cpp include/*.h include/checkrun.h include/feedpanda.h in
 	$(external) -lrt -g \
 	$(LDFLAGS) $(CFLAGS) -L$(pandalib) $(pandalibs) -lTMVA -o $(target) src/slimmer.cpp
 
-$(regression): src/regression.cpp include/*.h include/feedregression.h include/$(regclass).h \
+$(regression): src/regression.cpp include/[!f]*.h include/feedregression.h include/$(regclass).h \
 	${CROMBIEPATH}/src/include/crombie/*.h ${CROMBIEPATH}/old/SkimmingTools/interface/*.h \
 	include/roccor/RoccoR.cc include/jecsys \
 	${CMSSW_BASE}/lib/${SCRAM_ARCH}/*.so \
@@ -66,7 +66,7 @@ $(regression): src/regression.cpp include/*.h include/feedregression.h include/$
 	$(external) -lboost_filesystem -lrt -g \
 	$(LDFLAGS) $(CFLAGS) -L$(pandalib) $(pandalibs) -lTMVA -o $(regression) src/regression.cpp
 
-$(smear): src/smear.cpp include/*.h include/feedsmear.h include/smearfile.h include/checkrun.h \
+$(smear): src/smear.cpp include/[!f]*.h include/feedsmear.h include/smearfile.h include/checkrun.h \
 	${CROMBIEPATH}/src/include/crombie/*.h ${CROMBIEPATH}/old/SkimmingTools/interface/*.h \
 	include/roccor/RoccoR.cc include/jecsys \
 	${CMSSW_BASE}/lib/${SCRAM_ARCH}/*.so \
