Adjust submission parameters

--- a/nanoslimmer/submit/tmpl.cfg
+++ b/nanoslimmer/submit/tmpl.cfg
@@ -86,5 +86,8 @@ use_x509userproxy       = True
 should_transfer_files   = YES
 on_exit_hold            = (ExitBySignal == True) || (ExitCode != 0)
 
+periodic_release = (JobRunCount < 5 && CurrentTime - EnteredCurrentStatus > 300)
+periodic_hold = (JobStatus == 2 && CommittedTime - CommittedSuspensionTime > 25200)
+
 +AcctGroup              = "group_cmsuser"
 +AccountingGroup        = "group_cmsuser.dabercro"
