Clean up some running on the T3

--- a/nanoslimmer/submit/tmpl.cfg
+++ b/nanoslimmer/submit/tmpl.cfg
@@ -56,6 +56,14 @@ Requirements = Arch == "X86_64" && \
                Machine != "node424.eth.cluster" && \
                Machine != "node425.eth.cluster" && \
                Machine != "T3BTCH010.MIT.EDU" && \
+               Machine != "T3BTCH044.MIT.EDU" && \
+               Machine != "T3BTCH045.MIT.EDU" && \
+               Machine != "T3BTCH050.MIT.EDU" && \
+               Machine != "T3BTCH051.MIT.EDU" && \
+               Machine != "T3BTCH052.MIT.EDU" && \
+               Machine != "T3BTCH096.MIT.EDU" && \
+               Machine != "T3BTCH100.MIT.EDU" && \
+               Machine != "T3BTCH010.MIT.EDU" && \
                Machine != "T3BTCH031.MIT.EDU" && \
                Machine != "T3BTCH041.MIT.EDU" && \
                Machine != "T3BTCH042.MIT.EDU" && \
@@ -91,3 +99,5 @@ periodic_hold = (JobStatus == 2 && CommittedTime - CommittedSuspensionTime > 216
 
 +AcctGroup              = "group_cmsuser"
 +AccountingGroup        = "group_cmsuser.dabercro"
+
++REQUIRED_OS = "rhel6"
