--- a/nanoslimmer/submit/tmpl.cfg
+++ b/nanoslimmer/submit/tmpl.cfg
@@ -75,6 +75,7 @@ Requirements = Arch == "X86_64" && \
                Machine != "T3BTCH097.MIT.EDU" && \
                Machine != "T3BTCH100.MIT.EDU" && \
                Machine != "T3BTCH101.MIT.EDU" && \
+               Machine != "T3BTCH102.MIT.EDU" && \
                Machine != "T3BTCH103.MIT.EDU" && \
                Machine != "T3BTCH104.MIT.EDU" && \
                Machine != "T3BTCH105.MIT.EDU" && \
